app/javascript/styles/backend/application.scss
.notified-message {
  display: inline-block;
  width: 100%;
  height: 50px;
  background-color: #e6e6e6;
  border-left: 3px solid #8c8c8c;
  
  .text-middle {
    vertical-align: middle;
  }
}


table .table {
  display: block;
}

.sortable-items {
  .item {
    cursor: pointer;
  }
}

.sortable-drag {
  background-color: #f1f1f1;
}

